--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -2,7 +2,7 @@
 margin-top: 20px;
 margin-left: 12px;
 /*max-width: 50%;*/
-background-color: white;
+background-color: #C8DA2C;
  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 
 }
